5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1618_2924.log
== TEST (2019-04-02 11:14:45) 
-- CODE:
apim = int(input("posicao inicial do movel;"))
avm = int(input("a velocidade do movel;"))
oit = int (input(" o intervalo de tempo:"))

s = apim+(avm.vt)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = apim+(avm.vt)
AttributeError: 'int' object has no attribute 'vt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:06) 
-- CODE:
apim = int(input("posicao inicial do movel;"))
avm = int(input("a velocidade do movel;"))
oit = int (input(" o intervalo de tempo:"))

s = apim+(avm.oit)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = apim+(avm.oit)
AttributeError: 'int' object has no attribute 'oit'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:15:19) 
-- CODE:
apim = int(input("posicao inicial do movel;"))
avm = int(input("a velocidade do movel;"))
oit = int(input(" o intervalo de tempo:"))

s = apim+(avm.oit)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = apim+(avm.oit)
AttributeError: 'int' object has no attribute 'oit'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:36) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t.v)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = so+(t.v)
AttributeError: 'int' object has no attribute 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:16:55) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(s)
-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:18:21) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
pf = s * 60
print(int(pf))
-- OUTPUT:
180120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:28:13) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
pf = s//60 
print(int(pf))
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:29:03) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(int(pf))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(pf))
NameError: name 'pf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:29:17) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(int(s))
-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:04) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(int(s,"m"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(s,"m"))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:15) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(int(s, "m"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(s, "m"))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:33) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(s, "m")
-- OUTPUT:
3002 m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:40:00) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(s, "m")
-- OUTPUT:
3002 m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:40:38) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input(" o intervalo de tempo:"))

s = so+(t*v)
print(int(s, "m"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(s, "m"))
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:41:59) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input("o intervalo de tempo:"))

s = so+(t*v)
print(int(s))
-- OUTPUT:
3002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:42:08) 
-- CODE:
so = int(input("posicao inicial do movel;"))
t = int(input("a velocidade do movel;"))
v = int(input("o intervalo de tempo:"))

s = so+(t*v)
print(int(s))
-- EXECUTION TIME:
0.166722
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
3002
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
4252
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
3058
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
